<resources>
    <string name="app_name">HealthManager</string>
    <string name="page_title">健康管家</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_Diet">今日饮食</string>
    <string name="recipe">食谱推荐</string>
    <string name="foodstuff">食材广场→</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="cal">总热量</string>
    <string name="carbohydrates">碳水化合物</string>
    <string name="protein">蛋白质</string>
    <string name="fats">脂肪</string>
    <string name="kcal">千卡</string>
    <string name="g">克</string>
    <string name="ID">用户名</string>
    <string name="password">密码</string>
    <string name="show">你好，\n欢迎使用健康管家</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="loginDemo">登陆界面</string>
    <string name="registerDemo">注册界面</string>
    <string name="TODO">TODO</string>
    <string name="successTips">登录成功</string>
    <string name="registered">注册成功</string>
    <string name="account_existed">账号已注册</string>
    <string name="unregistered">未注册</string>
    <string name="errorTips">请输入完整账号密码!</string>
</resources>