<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:id="@+id/textView1"-->
<!--            android:layout_width="384dp"-->
<!--            android:layout_height="175dp"-->
<!--            android:layout_marginStart="12dp"-->
<!--            android:layout_marginTop="17dp"-->
<!--            android:background="@drawable/shape"-->
<!--            android:backgroundTint="@color/straw_color"-->
<!--            android:text="" />-->
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="384dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/straw_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:text="582"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="38dp"
                android:text="@string/kcal"
                android:textColor="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginStart="40dp"
                android:text="@string/cal"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="232dp"
                android:text="60"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="312dp"
                android:layout_marginTop="38dp"
                android:text="@string/g"
                android:textColor="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginStart="232dp"
                android:text="@string/carbohydrates"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="40dp"
                android:text="25"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="158dp"
                android:text="@string/g"
                android:textColor="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="200dp"
                android:layout_marginStart="40dp"
                android:text="@string/protein"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="140dp"
                android:layout_marginStart="232dp"
                android:text="25"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="312dp"
                android:layout_marginTop="158dp"
                android:text="@string/g"
                android:textColor="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="200dp"
                android:layout_marginStart="232dp"
                android:text="@string/fats"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:text="@string/today_s_Diet"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                app:srcCompat="@mipmap/ic_breakfast"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/breakfast"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                app:srcCompat="@mipmap/ic_lunch"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/lunch"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                app:srcCompat="@mipmap/ic_dinner"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/dinner"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:text="@string/recipe"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="18dp"
            app:srcCompat="@drawable/pizza"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/soup"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/fruit"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="17dp"
            android:text="@string/foodstuff"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_marginBottom="120dp"/>
    </LinearLayout>

</ScrollView>